--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,10 @@
 [build]
   publish = "dist"
   command = "yarn generate"
+
+[[redirects]]
+  from = "/tag_path/*"
+  to = "https://cXXXX.csd.dotomi.com/:splat"
+  status = 200
+  force = true
+  headers = {X-From = "Netlify", X-Forwarded-Request-Path = "/tag_path", RP-Host = "netlify-next.cnvrm.com"}
